<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_category"
            android:title="@string/nav_category"
            android:icon="@drawable/ic_categories"/>

        <item android:id="@+id/nav_offer"
            android:title="@string/nav_offer"
            android:icon="@drawable/ic_offer"/>


        <item android:id="@+id/nav_myCart"
            android:title="@string/nav_myCart"
            android:icon="@drawable/ic_my_cart"/>

        <item android:id="@+id/nav_myOrders"
            android:title="@string/nav_myOrder"
            android:icon="@drawable/ic_orders"/>
        <item android:id="@+id/nav_update_profile"
            android:title="@string/update"
            android:icon="@drawable/ic_update"/>
        <item android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_logout"
            />

    </group>



</menu>