<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shop_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_shop_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/nav_category" />
        <item
            android:id="@+id/nav_shop_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/nav_myOrder" />
        <item
            android:id="@+id/nav_shop_add_product"
            android:icon="@drawable/ic_add_product"
            android:title="@string/nav_add_product" />
        <item
            android:id="@+id/nav_shop_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />

    </group>
</menu>