<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".BuyerRegister">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:id="@+id/messageTextView"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_margin="50dp"

        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageTextView"
        android:layout_margin="10dp"
        android:text="@string/ok"
        android:id="@+id/buyer_register_ok"
        android:layout_centerHorizontal="true"

        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:id="@+id/buyer_register_circleimage"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="3dp"
        android:src="@drawable/ic_person"
        android:visibility="gone"
        />
   <EditText
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_below="@id/buyer_register_circleimage"
       android:backgroundTint="@android:color/white"
       android:layout_margin="10dp"
       android:id="@+id/buyer_register_name"
       android:hint="@string/username"
       android:textColorHint="@android:color/darker_gray"
       android:paddingStart="10dp"
       android:layout_centerHorizontal="true"
       android:textColor="@android:color/white"
       android:visibility="gone"
       />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buyer_register_name"
        android:backgroundTint="@android:color/white"
        android:layout_margin="10dp"
        android:id="@+id/buyer_register_address"
        android:hint="@string/address"
        android:textColorHint="@android:color/darker_gray"
        android:paddingStart="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:visibility="gone"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buyer_register_address"
        android:backgroundTint="@android:color/white"
        android:layout_margin="10dp"
        android:id="@+id/buyer_register_contact"
        android:hint="@string/contact"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:paddingStart="10dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buyer_register_contact"
        android:layout_margin="10dp"
        android:text="@string/register"
        android:id="@+id/buyer_register_Button"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />
</RelativeLayout>