<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:layout_margin="10dp"
        android:id="@+id/update_profile_name"
        android:hint="@string/username"
        android:textColorHint="@android:color/darker_gray"
        android:paddingStart="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"

        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_profile_name"
        android:backgroundTint="@android:color/white"
        android:layout_margin="10dp"
        android:id="@+id/update_profile_address"
        android:hint="@string/address"
        android:textColorHint="@android:color/darker_gray"
        android:paddingStart="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"

        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_profile_address"
        android:backgroundTint="@android:color/white"
        android:layout_margin="10dp"
        android:id="@+id/update_profile_contact"
        android:hint="@string/contact"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:paddingStart="10dp"
        android:layout_centerHorizontal="true"

        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_profile_contact"
        android:layout_margin="10dp"
        android:text="@string/updatebtn"
        android:id="@+id/update_profile_Button"
        android:layout_centerHorizontal="true"

        />

</RelativeLayout>