<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:id="@+id/email_edit_text"
        android:hint="@string/emailAddress"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_email"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_edit_text"
        android:layout_below="@+id/loginwaveView"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:id="@+id/password_edit_text"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_lock"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email_edit_text"
        android:background="@drawable/custom_edit_text"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/login_button"
        android:background="@drawable/custom_auth_button"
        android:layout_below="@+id/password_edit_text"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@android:color/white"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/Signup_button"
        android:background="@drawable/custom_auth_button"
        android:layout_below="@+id/password_edit_text"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        android:visibility="gone"
        android:textColor="@android:color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/need_account_texView"
        android:text="@string/needAnAccount"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <View
        android:id="@+id/loginwaveView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/logintopView"
        android:background="@drawable/ic_wave"/>
    <View
        android:id="@+id/logintopView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_person"/>
        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_height="100dp"
            android:text="@string/haveAnAccount"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>